--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "react-css-renderer",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/LukasBombach/react-css-renderer",
-  "author": "Lukas Bombach <lukas.bombach@googlemail.com>",
-  "license": "MIT",
+  "private": true,
   "scripts": {
-    "dev": "nodemon -q -w src/** --exec 'ts-node -T src/index.ts'"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "12.0.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
-    "@types/react-reconciler": "0.26.4",
-    "nodemon": "2.0.14",
-    "react": "17.0.2",
-    "react-reconciler": "0.26.2",
-    "ts-node": "10.4.0",
+    "@types/react": "17.0.34",
+    "eslint": "7",
+    "eslint-config-next": "12.0.3",
     "typescript": "4.4.4"
   }
 }
