--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,17 +4,17 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": "./src"
+    "incremental": true
   },
-  "include": ["react-css.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "react-css.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
